--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: @album, class: "row", style: "width: 100%") do |f| %>
     <div class="col-6">
         <%= f.label :title %><% if !@album.errors[:title].any? %><br/><% end %>
-        <%= f.text_field :title, placeholder: "Photo Title", style: "width: 90%; margin-bottom: 1.5rem" %>
+        <%= f.text_field :title, placeholder: "Album Title", style: "width: 90%; margin-bottom: 1.5rem" %>
         <% if @album.errors[:title].any? %>
             <p style="color: red; margin-top: -1.5rem;"><%= @album.errors.full_messages_for(:title).first %></p>
         <% end %>
@@ -12,7 +12,7 @@
 
     <div class="col-6">
         <%= f.label :description %><% if !@album.errors[:description].any? %><br/><% end %>
-        <%= f.text_area :description, placeholder: "Photo Description", size: "50x5", style: "width: 90%; margin-bottom: 1.5rem" %>
+        <%= f.text_area :description, placeholder: "Album Description", size: "50x5", style: "width: 90%; margin-bottom: 1.5rem" %>
         <% if @album.errors[:description].any? %>
             <p style="color: red; margin-top: -1.5rem;"><%= @album.errors.full_messages_for(:description).first %></p>
         <% end %>
