--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= render 'layouts/rails_default' %>
     <%= javascript_include_tag :jquery %>
-    
+    <%= javascript_include_tag "rails-ujs" %>
   </head>
 
   <body style="background-color: #f8f8f8">
