--- a/app/assets/stylesheets/admin/albums/index.css
+++ b/app/assets/stylesheets/admin/albums/index.css
@@ -1,10 +1,11 @@
 #admin_albums_main {
   background-color: #f8f8f8;
   width: 100%;
+  height: 100%;
   padding: 0.8rem 0;
 }
 #admin_albums_main .container_ {
-  height: 100%;
+  min-height: calc(100vh - var(--header-height));
   background-color: #ffffff;
   display: flex;
   flex-direction: row;
